# simu

./: .gitignore  Makefile  README.md  mujoco.patch  pyproject.toml  requirements.txt
pretrained/: ppo_hybrid_policy.pth  ppo_simple_policy.pth
simu/: display.py
simu/policies/: hybrid.py  simple.py  transformer.py
simu/train/: ppo.py
